# genai-workshop-sept-2025-ghraisoni

./: README.md  chaptersync
01 - Simple Chatbot/: .env.example  main.py  main_with_history.py
02 - Simple RAG/: .env.example  embedding.py  index.py  main.py
03 - fewshot/: .env.example  main.py
03 - fewshots/: index.py  main.py
04 - openai compatible/: .chapter  .env.example  README.md  api.py  main.py  pyproject.toml
session01/: .chapter  README.md  exercise.py
session02/: .chapter  README.md  chatbot.py
session03/: .chapter  README.md  prompt_templates.py
session04/: .chapter  README.md  app.py
session05/: .chapter  README.md  main.py
session06/: .chapter  README.md  main.py
session07/: .chapter  README.md  main.py
session08/: .chapter  README.md  main.py
session09/: .chapter  README.md  main.py
session10/: .chapter  README.md  main.py
